# noobStudy

./: .gitignore  Makefile  README.md
script/: build.bat
src/: CMakeLists.txt
src/algorithm/: CMakeLists.txt
src/algorithm/algoLib/: CMakeLists.txt  search.cpp  search.hpp  sort.cpp  sort.hpp
src/cpp_pp/: CMakeLists.txt
src/cpp_pp/17/: CMakeLists.txt  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp
src/cpp_pp/18/: CMakeLists.txt  average_list.hpp  cpmv.cpp  cpmv.hpp  main1.cpp  main2.cpp  main3.cpp  sum_value.hpp
src/dataStructure/: CMakeLists.txt  list.hpp  node.hpp  queue.hpp  stack.hpp  tree.hpp
src/leecode/algorithm/: CMakeLists.txt  addTwoNumbers.cpp  twoSum.cpp
src/leetcode/: CMakeLists.txt
src/leetcode/algorithm/: 10.regular-expression-matching.cpp  10.regular-expression-matching_recursive.cpp  1002_findCommonChar.cpp  1003_distributeCandyToPeople.cpp  1005_maxSumAfterKNegation.cpp  1008_constructBinaryTreeFromPreorderTraversal.cpp  1009_bitwiseComplement.cpp  100_sameTree.cpp  101.symmetric-tree.cpp  1010_pairsOfSongs.cpp  1013_partitionArrayIntoThreePartsOfEqualSum.cpp  1014.best-sightseeing-pair.cpp  1017.convert-to-base-2.cpp  1018_binaryPrefixDividibleByFive.cpp  101_symmetricTree.cpp  1020.number-of-enclaves.cpp  1021_removeOutermostParentheses.cpp  1022_sumOfRootToLeaf.cpp  1025.divisor-game.cpp  1025_divisorGame.cpp  1028.recover-a-tree-from-preorder-traversal.cpp  1029_twoCitySchedule.cpp  1030_matrixCellInDistanceOrder.cpp  1033_moveStonesUntilConsecutive.cpp  1037_validBoomerang.cpp  1038_bstToGst.cpp  1042_flowerPlantingWithoutAdjacent.cpp  1046_lastStoneWeight.cpp  1047_removeAdjacentDuplicate.cpp  1048.longest-string-chain.cpp  104_maxDepthOfBinaryTree.cpp  1051_heightChecker.cpp  1071_gcdOfStrings.cpp  1078_occurrencesAfterBigram.cpp  1079.letter-tile-possibilities.cpp  1079_letterTilePossibilities.cpp  107_BinaryTreeLevelOrderTraversal.cpp  1089_duplicateZero.cpp  108_convertSortedArrayToBST.cpp  109.convert-sorted-list-to-binary-search-tree.cpp  (+407 more)
src/leetcode/java/: twoSum.java
src/leetcode/tricks/: CMakeLists.txt  complement.cpp  morris.cpp  numOfOne.cpp  swap.cpp
