# Count input number before $
add_executable(17_1
    main1.cpp
)

# input to file
add_executable(17_2
    main2.cpp
)

# copy to another file
add_executable(17_3
    main3.cpp
)

# combine two files
add_executable(17_4
    main4.cpp
)

# read lines from two file, display and remove redundancy
add_executable(17_5
    main5.cpp
)
