add_library(leetcode_algo
    7_reverseInt.cpp
    9_palindromeNumber.cpp
    13_romanToInteger.cpp
    14_longestCommonPrefix.cpp
    20_validParentheses.cpp
    21_mergeTwoSortedLists.cpp
    27_removeElements.cpp
    28_implementStrStr.cpp
    35_searchInsertPosition.cpp
    53_maxSubarray.cpp
    58_lengthOfLastWord.cpp
    66_plusOne.cpp
    67_addBinary.cpp
    69_sqrt.cpp
    70_climbStairs.cpp
    83_removeDuplicateFromSortedList.cpp
    88_mergeSortedArray.cpp
    100_sameTree.cpp
    101_symmetricTree.cpp
    104_maxDepthOfBinaryTree.cpp
    107_BinaryTreeLevelOrderTraversal.cpp
    108_convertSortedArrayToBST.cpp
    110_balancedBinaryTree.cpp
    111_minDepthOfBinaryTree.cpp
    112_pathSum.cpp
    118_pascalTriangle.cpp
    119_pascalTriangle2.cpp
    121_bestTimeToBuyAndSellStock.cpp
    122_bestTimeToBuyAndSellStock2.cpp
    125_validPalindrome.cpp
    136_singleNumber.cpp
    141_linkedListCycle.cpp
    155_minStack.cpp
    160_intersectionOfLinkedList.cpp
    167_twoSum2.cpp
    168_excelSheetColumnTitle.cpp
    169_majorityElement.cpp
    171_excelSheetColumnNumber.cpp
    172_factorialTrailingZero.cpp
    189_rotateArray.cpp
    190_reverseBits.cpp
    191_numberOfOneBits.cpp
    202_happyNumber.cpp
    203_removeLinkedListElements.cpp
    204_countPrimes.cpp
    205_isomorphicStrings.cpp
    206_reverseLinkedList.cpp
    217_containDuplicate.cpp
    219_containDuplicate2.cpp
    225_implementStackUsingQueue_1Queue.cpp
    225_implementStackUsingQueue_2Queue.cpp
    226_invertBinaryTree.cpp
    231_powerOfTwo.cpp
    232_implementQueueWithStack.cpp
    234_palindromeLinkedList.cpp
    235_lowestCommonAncestor.cpp
    237_deleteNodeInLinkedList.cpp
    242_validAnagram.cpp
    257_binaryTreePaths.cpp
    258_addDigits.cpp
    263_uglyNumber.cpp
    268_missingNumber.cpp
    278_firstBadVersion.cpp
    283_moveZeros.cpp
    290_wordPattern.cpp
    292_nimGame.cpp
    299_bullAndCows.cpp
    303_rangeSumQueryImmutable.cpp
    326_powerOfThree.cpp
    342_powerOfFour.cpp
    344_reverseString.cpp
    345_reverseVowelOfString.cpp
    349_intersectionOfTwoArray.cpp
    350_intersectionOfTwoArrays2.cpp
    367_validPerfectSquare.cpp
    371_sumOfTwoInt.cpp
    374_guessNumberHigherOrLower.cpp
    383_ransomNote.cpp
    387_findUniqueChar.cpp
    389_findTheDifference.cpp
    401_binaryWatch.cpp
    404_sumOfLeftLeaves.cpp
    405_decToHex.cpp
    409_longestPalindrome.cpp
    414_thirdMaxNumber.cpp
    415_addStrings.cpp
    429_naryTreeLevelOrderTraversal.cpp
    434_numberOfSegmentsInString.cpp
    437_pathSum3.cpp
    441_arrangingCoins.cpp
    443_stringCompression.cpp
    447_numOfBoomerangs.cpp
    448_findAllNumDisappear.cpp
    453_minMovesToEqualArrayElements.cpp
    455_assignCookies.cpp
    459_repeatSubstringPattern.cpp
    461_hammingDistance.cpp
    463_islandPerimeter.cpp
    475_heaters.cpp
    476_findComplement.cpp
    482_licenseKeyFormat.cpp
    485_maxConsecutiveOnes.cpp
    492_constructRectangular.cpp
    496_nextGreaterElement1.cpp
    500_keyboardRow.cpp
    501_findModeInBST.cpp
    504_base7.cpp
    506_relativeRanks.cpp
    507_perfectNumber.cpp
    509_fibonacciNumber.cpp
    520_detectCapital.cpp
    521_longestUncommonSubstring1.cpp
    530_minAbsDiffInBST.cpp
    532_kDiffPairs.cpp
    538_convertBSTtoGT.cpp
    541_reverseString2.cpp
    543_diameterOfBinaryTree.cpp
    551_AttendanceRecord1.cpp
    557_reverseWordsInString3.cpp
    559_maxDepthOfNaryTree.cpp
    561_arrayPartition1.cpp
    563_binaryTreeTilt.cpp
    566_reshapeMatrix.cpp
    572_subTreeOfAnotherTree.cpp
    575_distributeCandy.cpp
    581_shortestUnsortedSubarray.cpp
    589_NaryTreePreorderTraversal.cpp
    590_NaryTreePostorderTraversal.cpp
    594_findLHS.cpp
    598_rangeAddition2.cpp
    599_minIndexSumOfTwoLists.cpp
    605_canPlaceFlowers.cpp
    606_constructStringFromBinaryTree.cpp
    617_mergeBST.cpp
    628_maximumProductOfThreeNumbers.cpp
    633_sumOfSquareNumbers.cpp
    637_averageOfLevelsInBinaryTree.cpp
    643_maxAverageSubarray1.cpp
    645_setMismatch.cpp
    653_twoSum4.cpp
    654_mbt.cpp
    657_robotReturnToOrigin.cpp
    661_imageSmoother.cpp
    665_nonDecreaseArray.cpp
    669_trimBST.cpp
    671_2ndMinNodeInBinaryTree.cpp
    674_largestContinueIncreaseSequence.cpp
    680_validPalindrome2.cpp
    682_baseballGame.cpp
    686_repeatedStringMatch.cpp
    690_employeeImportance.cpp
    693_hasAlternatingBits.cpp
    696_countBinarySubStrings.cpp
    697_degreeOfAnArray.cpp
    700_searchInBST.cpp
    701_insertIntoBST.cpp
    704_binarySearch.cpp
    709_toLowerCase.cpp
    717_1and2bitChar.cpp
    720_longestWordInDict.cpp
    724_findPivotIndex.cpp
    728_selfDividingNumber.cpp
    733_floodFill.cpp
    744_findSmallestLetterLargerThanTarget.cpp
    746_minCostClimbStairs.cpp
    747_dominantIndex.cpp
    748_shortestCompletionWord.cpp
    754_reachNumber.cpp
    762_primeNumberOfSetBits.cpp
    766_toeplitzMatrix.cpp
    771_jewelInStone.cpp
    783_minDistanceInBST.cpp
    784_letterCasePermutation.cpp
    788_rotatedDigits.cpp
    796_rotateString.cpp
    804_uniqueMorseCode.cpp
    806_numOfLinesToWriteString.cpp
    807_maxIncreaseToKeepCitySkyline.cpp
    811_subdomainVisitCount.cpp
    819_mostCommonWord.cpp
    821_shortestDistanceToAChar.cpp
    824_goatLatin.cpp
    830_positionOfLargeGroups.cpp
    832_flipImage.cpp
    836_rectangleOverlap.cpp
    840_magicSquaresInGrid.cpp
    844_backspaceStringCompare.cpp
    849_maxDistanceToClosestPeople.cpp
    852_peakIndexInMountainArray.cpp
    859_buddyString.cpp
    860_lemonadeChange.cpp
    867_transposeMatrix.cpp
    868_binaryGap.cpp
    872_leafSimilarTree.cpp
    874_walkingRobotSimulation.cpp
    876_midOfLinkedList.cpp
    883_projectionAreaOf3dShapes.cpp
    884_uncommonWords.cpp
    892_surfaceAreaOf3dShapes.cpp
    888_fairCandySwap.cpp
    893_groupsOfSpecialEquivalentStrings.cpp
    896_monotonicArray.cpp
    897_increasingOrderSearchTree.cpp
    905_sortByParity.cpp
    908_smallestRange1.cpp
    914_xOfAKindInADeckOfCards.cpp
    917_reverseOnlyLetters.cpp
    922_sortArrayByParity2.cpp
    925_longPressedName.cpp
    929_uniqueEmailAddrs.cpp
    933_numOfRecentCalls.cpp
    937_reorderLogs.cpp
    938_rangeSumOfBst.cpp
    941_validMountainArray.cpp
    942_diStringMatch.cpp
    944_deleteColumnsToMakeSorted.cpp
    949_largestTimeForGivenDigits.cpp
    950_revealCardsInIncreasingOrder.cpp
    953_isAlienSorted.cpp
    961_nRepeatElement.cpp
    970_powerfulIntegers.cpp
    976_largestPerimeterTriangle.cpp
    977_squareOfSortedArray.cpp
    985_sumOfEvenNumberAfterQuery.cpp
    989_addToArrayForm.cpp
    993_cousinsInBinaryTree.cpp
    994_rottingOranges.cpp
    997_findTheTownJudge.cpp
    999_availableCapturesForRook.cpp
    1002_findCommonChar.cpp
    1003_distributeCandyToPeople.cpp
    1005_maxSumAfterKNegation.cpp
    1009_bitwiseComplement.cpp
    1010_pairsOfSongs.cpp
    1013_partitionArrayIntoThreePartsOfEqualSum.cpp
    1018_binaryPrefixDividibleByFive.cpp
    1021_removeOutermostParentheses.cpp
    1022_sumOfRootToLeaf.cpp
    1025_divisorGame.cpp
    1029_twoCitySchedule.cpp
    1030_matrixCellInDistanceOrder.cpp
    1033_moveStonesUntilConsecutive.cpp
    1037_validBoomerang.cpp
    1038_bstToGst.cpp
    1042_flowerPlantingWithoutAdjacent.cpp
    1046_lastStoneWeight.cpp
    1047_removeAdjacentDuplicate.cpp
    1051_heightChecker.cpp
    1161_maxLevelSumOfBinaryTree.cpp
    1071_gcdOfStrings.cpp
    1078_occurrencesAfterBigram.cpp
    1079_letterTilePossibilities.cpp
    1089_duplicateZero.cpp
    1108_defangingIP.cpp
    1122_relativeSortArray.cpp
    1128_numOfEqualDominoPairs.cpp
    addTwoNumbers.cpp
    ambiguousCoordinates.cpp
    longestSubstringWithoutRepeat.cpp
    twoSum.cpp
)